fix: 네비게이션 바 z-index 조정 (#49)

--- a/common-service/src/main/resources/static/css/layout-member.css
+++ b/common-service/src/main/resources/static/css/layout-member.css
@@ -23,6 +23,8 @@ body {
     /* to make navbar float */
     position: fixed;
     top: 0;
+
+    z-index: 999;
 }
 .navbar-wrapper {
     display: flex;
